<resources>
    <string name="app_name">WIPlay</string>
    <string name="anime">Anime</string>
    <string name="bollywood">Bollywood</string>
    <string name="hollywood">Hollywood </string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="thriller">Thriller</string>
    <string name="comedy">Comedy</string>
    <string name="thumbnail_image_desc">thumbnail_image</string>
    <string name="search_view_title">Search movie</string>
    <string name="content_description_search">search_view</string>
    <string name="search_title">Search</string>
    <string name="searchbarhint">Enter Movie name</string>
    <string name="search_hint">Enter Movie Name</string>
    <string name="bottom_banner_text">WIPLAY Unlimited Entertainment</string>
    <string name="update_available">Update Available</string>
    <string name="wilogo">WILOGO</string>
    <string name="changelog">Changelog :-</string>
    <string name="full_changelog_here">Full Changelog here </string>
    <string name="exit_button_text">Exit</string>
    <string name="update_button_text">Update</string>
</resources>